recipient CRUD OK

--- a/app/views/factures/_form.html.erb
+++ b/app/views/factures/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= simple_form_for [ @facture, @recipient ] do |f| %>
+<%= simple_form_for [ facture, recipient ] do |f| %>
   <%= f.association :name %>
   <%= f.association :description %>
   <%= f.input :price %>
