--- a/app/views/factures/index.html.erb
+++ b/app/views/factures/index.html.erb
@@ -1,7 +1,8 @@
-<h1> INDEX</h1>
+<h1> INDEX FACTURES</h1>
 
 <div>
-  <%= link_to "Add a new Facture", new_facture_path, class: 'btn btn-primary' %>
+  <%= link_to "nouvelle facture", new_facture_path, class: 'btn btn-primary' %>
+  <%= link_to "nouveau destinataire", new_recipient_path, class: 'btn btn-primary' %>
 </div>
 
 <ul>
