--- a/app/views/factures/new.html.erb
+++ b/app/views/factures/new.html.erb
@@ -1,3 +1,22 @@
 <h1>NEW FACTURE</h1>
 
-<%= render "form", facture: @facture %>
+<%# <%= render "form", facture: @facture %> 
+
+<%#<%= simple_form_for [ @facture, @recipient ] do |f| %>
+<%#  <%= f.association :name %>
+<%#  <%= f.hidden_field :name, {:value => @recipient.name} %>
+<%#  <%= f.hidden_field :description, {:value => @recipient.description} %>
+<%#  <%= f.association :description %>
+<%#  <%= f.input :price %>
+<%#  <%= f.input :limite  %>
+<%#  <%= f.input :sold %>
+<%#  <%= f.button :submit, "VALIDER", class: ""%>
+<%#<% end %>
+
+<%= form_for(@facture) do |f| %>
+  <%= f.hidden_field :recipient_id %>
+  <%= f.date_field :limite %>
+  <%= f.number_field :price %>
+  <%= f.check_box :sold %>
+  <%= f.submit %>
+<% end %>
