--- a/app/views/factures/new.html.erb
+++ b/app/views/factures/new.html.erb
@@ -14,7 +14,8 @@
 <%#<% end %>
 
 <%= form_for(@facture) do |f| %>
-  <%= f.hidden_field :recipient_id %>
+  <%# <%= f.hidden_field :recipient_id, value: 1 %>
+  <%= f.collection_select :recipient_id, Recipient.order(:name), :id, :name %>
   <%= f.date_field :limite %>
   <%= f.number_field :price %>
   <%= f.check_box :sold %>
