--- a/app/views/factures/show.html.erb
+++ b/app/views/factures/show.html.erb
@@ -1,6 +1,6 @@
 <h1>VOTRE FACTURE</h1>
 
-<h2>Pour <%= @facture.recipient_id.value %></h2>
+<h2>Pour <%= @facture.recipient.name %></h2>
 <p><%= @facture.price %> CHF</p>
 <p><%= @facture.sold %></p>
 
