--- a/app/views/factures/_form.html.erb
+++ b/app/views/factures/_form.html.erb
@@ -1,12 +1,12 @@
 
-<%= simple_form_for [ facture, recipient ] do |f| %>
-  <%= f.association :name %>
-  <%= f.association :description %>
-  <%= f.input :price %>
-  <%= f.input :limite  %>
-  <%= f.input :sold %>
-  <%= f.button :submit, "VALIDER", class: ""%>
-<% end %>
+<%# <%= simple_form_for [ facture, recipient ] do |f| %>
+  <%# <%= f.association :name %>
+  <%# <%= f.association :description %>
+  <%# <%= f.input :price %>
+  <%# <%= f.input :limite  %>
+  <%# <%= f.input :sold %>
+  <%# <%= f.button :submit, "VALIDER", class: ""%>
+<%# <% end %>
 
 
 <%# <div class="justify-content-md-center container">
@@ -21,3 +21,11 @@
     <%#  <%= f.button :submit, class:"btn btn-outline-danger" %>
   <%#  <% end %>
   <%# </div> %> %>
+
+<%= form_for(facture) do |f| %>
+  <%= f.collection_select :recipient_id, Recipient.order(:name), :id, :name %>
+  <%= f.date_field :limite %>
+  <%= f.number_field :price %>
+  <%= f.check_box :sold %>
+  <%= f.submit %>
+<% end %>
