--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -1,8 +1,16 @@
 <h1> INDEX DESTINATAIRES</h1>
 
 <div>
+  <%= link_to "Récapitulatif", root_path %> |
+  <%= link_to "Liste des bénéficiaires", recipients_path, class: '' %> |
+  <%= link_to "Liste des factures", factures_path, class: '' %>
+</div>
+
+<div>
+  ______
   <%= link_to "nouvelle facture", new_facture_path, class: 'btn btn-primary' %>
   <%= link_to "nouveau destinataire", new_recipient_path, class: 'btn btn-primary' %>
+  ______
 </div>
 
 <ul>
