--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,24 +2,28 @@
   // h1 {
   //   color: $darker;
   // }
-  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   h2 {
+    margin-top: 75px;
     color: $darker;
+    text-decoration: underline;
   }
 
   svg, img {
     width: 2em;
     height: 2em;
     display: flex;
-    fill: $darker;
-    color: $darker;
+    fill: $background;
+    color: $background;
   }
 
   .home-r-card {
     margin: 10px;
     padding: 10px;
-    border: 1px solid $darker;
+    border: 2px solid $darker;
     border-radius: 4px;
   }
 
@@ -33,27 +37,37 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
+    // width: 75%;
+    // margin-left: auto;
+    // margin-right: auto;
   }
 
-  .home-f-name, .home-f-price {
+  .home-f-block, .home-f-name {
     // color: red
-    width: 50%;
+    // width: 50%;
     background-color: $dark;
     margin: 2px;
     padding: 1em;
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $background;
+    font-weight: 600;
+    
   }
 
-  // .home-f-price {
-  //   // color: blue
-  // }
+  .home-f-name {
+    width: 65px;
+  }
+  .home-f-block {
+    min-width: 50px;
+    max-width: 70px;
+  }
 
   .home-f-line {
     display: flex;
-    // justify-content: center;
+    justify-content: center;
     // width: 75%;
   }
 }
