--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "config/colors";
 
 @import "factures/index";
+@import "factures/edit";
+@import "factures/form";
 
 @import "recipients/index";
 
