--- a/app/views/factures/edit.html.erb
+++ b/app/views/factures/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>EDIT FACTURE</h1>
+<div id="edit-f-page">
+  <h1>EDIT FACTURE</h1>
 
-<%= render "form", facture: @facture %>
+  <%= render "form", facture: @facture %>
+
+</div>
