--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -1,13 +1,5 @@
-<%#<%= simple_form_for @recipient do |f| %>
-<%#  <%= f.input :name %>
-<%#  <%= f.input :description %>
-<%#  <%= f.button :submit, "VALIDER", class: ""%>
-<%#<% end %>
-
-<%= form_for(recipient) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <%= f.submit %>
+<%= simple_form_for @recipient do |f| %>
+  <%= f.input :name %>
+  <%= f.input :description %>
+  <%= f.button :submit, "VALIDER", class: "" %>
 <% end %>
