--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,9 +6,12 @@
 @import "factures/form";
 
 @import "recipients/index";
+@import "recipients/form";
 
 @import "pages/footer";
 @import "pages/home";
+
+@import "flatpickr/dist/flatpickr";
 
 // @import "config/colors";
 
