--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -1,4 +1,5 @@
-<h1> NOUVEAU DESTINATAIRE</h1>
+<div id="new-r-page">
+  <h1> NOUVEAU BÉNÉFICIAIRES</h1>
 
-<%= render "form", recipient: @recipient %>
-
+  <%= render "form", recipient: @recipient %>
+</div>
