--- a/app/assets/stylesheets/factures/_new.scss
+++ b/app/assets/stylesheets/factures/_new.scss
@@ -1,5 +1,5 @@
-#new-f-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+// #new-f-page {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
