--- a/app/assets/stylesheets/recipients/_index.scss
+++ b/app/assets/stylesheets/recipients/_index.scss
@@ -7,7 +7,7 @@
   }
   
   h2 {
-    color: $dark;
+    color: $darker
   }
   
   ul {
@@ -20,14 +20,20 @@
   .index-r-cards {
     // border: 2px;
     margin: 10px 20px;
-    border: 4px solid $dark;
+    // border: 3px solid $dark;
     border-radius: 4px;
     padding: 10px 10px;
+    background-color: $dark;
+
   }
 
   .r-name {
     font-weight: bold;
-    color: $dark;
+    color: $background;
+  }
+
+  .r-desc {
+    color: $darker;
   }
 
 }
