--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "pages/home";
 
 @import "flatpickr/dist/flatpickr";
+@import "flatpickr/dist/themes/airbnb";
 
 // @import "config/colors";
 
