--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,11 @@
 @import "factures/index";
 @import "factures/edit";
 @import "factures/form";
+@import "factures/show";
 
 @import "recipients/index";
 @import "recipients/form";
+@import "recipients/show";
 
 @import "pages/footer";
 @import "pages/home";
