--- a/app/assets/stylesheets/factures/_show.scss
+++ b/app/assets/stylesheets/factures/_show.scss
@@ -3,10 +3,12 @@
   justify-content: space-around;
   flex-direction: column;
 
-  h1 {
-    color: $darker;
-    text-decoration: underline;
-  }
+  // h1 {
+  //   color: $darker;
+  //   text-decoration: underline;
+  //   margin-top: 50px;
+  //   margin-bottom: 50px;
+  // }
 
   h2 {
     color: $dark;
