--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,9 @@ ul, ol {
   list-style: none;
 }
 
+h1 {
+  color: $darker;
+  text-decoration: underline;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
