--- a/app/assets/stylesheets/factures/_form.scss
+++ b/app/assets/stylesheets/factures/_form.scss
@@ -1,9 +1,12 @@
 #new-r-page, #edit-r-page {
 
-  h1 {
-    color: $darker;
-    text-decoration: underline;
-  }
+  // h1 {
+  //   color: $darker;
+  //   text-decoration: underline;
+  //   margin-top: 50px;
+  //   margin-bottom: 50px;
+  // }
+
   #new_recipient, .edit_recipient {
     display: flex;
     flex-direction: column;
