--- a/app/assets/stylesheets/factures/_index.scss
+++ b/app/assets/stylesheets/factures/_index.scss
@@ -1,10 +1,10 @@
 #index-f-page{
-  h1 {
-    color: $darker;
-    text-decoration: underline;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
+  // h1 {
+  //   color: $darker;
+  //   text-decoration: underline;
+  //   margin-top: 50px;
+  //   margin-bottom: 50px;
+  // }
 
   h2 {
     color: $dark;
