--- a/app/assets/stylesheets/recipients/_form.scss
+++ b/app/assets/stylesheets/recipients/_form.scss
@@ -1,8 +1,10 @@
 #new-f-page, #edit-f-page {
-  h1 {
-    color: $darker;
-    text-decoration: underline;
-  }
+  // h1 {
+  //   color: $darker;
+  //   text-decoration: underline;
+  //   margin-top: 50px;
+  //   margin-bottom: 50px;
+  // }
 
   .new_facture, .edit_facture {
     display: flex;
