--- a/app/assets/stylesheets/recipients/_show.scss
+++ b/app/assets/stylesheets/recipients/_show.scss
@@ -3,6 +3,13 @@
   justify-content: space-around;
   flex-direction: column;
 
+  // h1 {
+  //   color: $darker;
+  //   text-decoration: underline;
+  //   margin-top: 50px;
+  //   margin-bottom: 50px;
+  // }
+
   h2 {
     color: $dark;
     text-decoration: underline;
